--- a/templates/customer/index.html
+++ b/templates/customer/index.html
@@ -2,7 +2,8 @@
 {% block title%}Thayũ-Affordable Homes{% endblock %} 
 {% block style %}
 <link rel="stylesheet" href="{% static 'css/index.css' %}" />
-{% endblock %} {% block content %}
+{% endblock %} 
+{% block content %}
 <div class="banner-content">
   <div class="container">
     <div class="row justify-content-between">
@@ -47,8 +48,8 @@
           <select class="form-select border-0" aria-label="location">
             <option selected>Location</option>
             
-            {% for country in locations %}
-              <option value="{{ forloop.counter }}">{{ country }}</option>
+            {% for location in locations %}
+              <option value="{{ location.id }}">{{ location.name }}</option>
             {% endfor %}
           </select>
         </div>
@@ -87,7 +88,7 @@
   </div>
   <!-- Properties -->
   <div class="container mt-2">
-    <h2 class="title-font my-4">Best Property this month</h2>
+    <h2 class="title-font my-4">Latest Properties</h2>
     <div class="row">
       {% for property in properties %}
         <div class="col-sm-12 co-md-4 col-lg-4 mt-2">
