--- a/templates/components/customer/property_card.html
+++ b/templates/components/customer/property_card.html
@@ -14,6 +14,8 @@
             </div>
             <div class="col-12">
             <p class="lead">{{ property.name }}</p>
+            <p class="lead">{{ property.location.name }}</p>
+            <p class="h3">KES {{ property.price }}</p>
             </div>
         </div>
         </div>
