--- a/templates/components/customer/search_form.html
+++ b/templates/components/customer/search_form.html
@@ -1,7 +1,7 @@
-<form action="#" class="form-group bg-light p-3 rounded shadow search-form">
+<form action="{% url 'customer:search-results' %}" class="form-group bg-light p-3 rounded shadow search-form" method="get">
     <div class="row align-items-center">
       <div class="col-3">
-        <select class="form-select border-0" aria-label="location">
+        <select class="form-select border-0" aria-label="location" name="location">
           <option selected>Location</option>
           
           {% for location in locations %}
@@ -14,11 +14,12 @@
         <select
           class="form-select bg-light"
           aria-label="Default select example"
+          name="house-type"
         >
-          <option selected>City</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+          <option selected>Type</option>
+          {% for house_type in house_types %}
+            <option value="{{ house_type.id }}">{{ house_type.name }}</option>
+          {% endfor %}
         </select>
       </div>
 
@@ -26,11 +27,16 @@
         <select
           class="form-select bg-light"
           aria-label="Default select example"
+          name="budget"
         >
-          <option selected>Budget</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+          <option selected value="">Budget(In KES)</option>
+          <option value="0">below 10,000</option>
+          <option value="1">10,000 - 20,000</option>
+          <option value="2">20,001 - 30,000</option>
+          <option value="3">30,001 - 40,000</option>
+          <option value="4">40,001 - 50,000</option>
+          <option value="5">50,001 - 100,000</option>
+          <option value="6">Above 100,000</option>
         </select>
       </div>
 
