--- a/templates/customer/property.html
+++ b/templates/customer/property.html
@@ -5,5 +5,12 @@
 {% block content %}
     <div class="container">
         <h1>Properties available</h1>
+        <div class="row mt-3">
+            {% for property in properties %}
+                <div class="col-sm-12 col-md-4 lg-3">
+                    {% include 'components/customer/property_card.html' %}
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
