--- a/templates/customer/index.html
+++ b/templates/customer/index.html
@@ -1,4 +1,7 @@
-{% extends 'layouts/customer_base.html' %} {% load static %} 
+{% extends 'layouts/customer_base.html' %} 
+{% load static %} 
+{% load floor_rounding %}
+
 {% block title%}Thayũ-Affordable Homes{% endblock %} 
 {% block style %}
 <link rel="stylesheet" href="{% static 'css/index.css' %}" />
@@ -23,11 +26,11 @@
       <div class="col-sm-12 col-md-4 col-lg-4 ps-5 mt-3 text-center">
         <div class="row justify-content-end me-1">
           <div class="col-8">
-            <h1>12</h1>
+            <h1>{{ locations.count }}</h1>
             <h6>Current locations</h6>
           </div>
           <div class="col-8">
-            <h1 class="mt-2">350+</h1>
+            <h1 class="mt-2">{{ properties.count|round_down:"5" }}</h1>
             <h6>Homes & Apartments</h6>
           </div>
           <div class="col-8">
@@ -48,7 +51,7 @@
   <div class="container mt-2">
     <h2 class="title-font my-4">Latest Properties</h2>
     <div class="row">
-      {% for property in properties %}
+      {% for property in properties|slice:":5" %}
         <div class="col-sm-12 co-md-4 col-lg-4 mt-2">
           {% include 'components/customer/property_card.html' %}
         </div>
