--- a/customer/static/css/dashboard.css
+++ b/customer/static/css/dashboard.css
@@ -5,6 +5,7 @@
     --primary-color: rgb(23, 23, 23);
     --secondary-color: #FE4F14;
     --secondary-color-brighter:#E26137;
+    --secondary-color-darker: #a2300a;
     --primary-variant: #EBEBEB;
     --secondary-variant: rgb(0, 20, 44);
     --secondary-variant-brighter: rgb(11, 35, 65);
@@ -32,11 +33,41 @@
     left:0;
     top:0;
     background-color: var(--secondary-color);
+    align-items: start;
 }
 
 .dashboard-content{
-    position:fixed;
+    position:absolute;
     right: 0;
     top:0;
     left: 25vw;
 }
+
+.sidebar ul{
+    list-style: none;
+    width:100% !important;
+    padding:0;
+    margin:25px 0 0 0;
+}
+
+.sidebar ul li{
+    margin:0px 5px;
+}
+
+.sidebar ul li a{
+    color: var(--primary-variant);
+    padding: 10px 16px;
+    display: block;
+    text-align: start;
+    text-decoration: none;
+}
+
+.active{
+    color: var(--secondary-color) !important;
+    background-color: var(--primary-variant) !important;
+}
+
+.sidebar ul li a:hover{
+    background-color: var(--secondary-color-darker);
+}
+
