--- a/staff/static/css/dashboard.css
+++ b/staff/static/css/dashboard.css
@@ -5,6 +5,7 @@
     --primary-color: rgb(23, 23, 23);
     --secondary-color: #FE4F14;
     --secondary-color-brighter:#E26137;
+    --secondary-color-darker: #a2300a;
     --primary-variant: #EBEBEB;
     --secondary-variant: rgb(0, 20, 44);
     --secondary-variant-brighter: rgb(11, 35, 65);
@@ -28,7 +29,7 @@
     position:fixed;
     z-index: 5;
     height:100vh;
-    width: 25px !important;
+    width: 25vw !important;
     left:0;
     top:0;
     background-color: var(--secondary-color);
@@ -40,3 +41,29 @@
     top:0;
     left: 25vw;
 }
+
+.sidebar ul{
+    list-style: none;
+}
+
+.sidebar ul li{
+    margin:0px 5px;
+}
+
+.sidebar ul li a{
+    color: var(--primary-variant);
+    padding: 10px 16px;
+    display: block;
+    text-align: start;
+    text-decoration: none;
+}
+
+.active{
+    color: var(--secondary-color) !important;
+    background-color: var(--primary-variant) !important;
+}
+
+.sidebar ul li a:hover{
+    background-color: var(--secondary-color-darker);
+}
+
