--- a/templates/components/customer/nav.html
+++ b/templates/components/customer/nav.html
@@ -58,7 +58,11 @@
         <!-- Signup button section -->
         <div class="col-3 d-none d-md-block d-lg-block">
             <div class="d-flex justify-content-center align-items-center">
-                <a href="#sign_up" class="btn-custom-secondary">Sign Up</a>
+                {% if request.user.is_authenticated %}
+                <a href="{% url 'signout' %}" class="btn-custom-secondary">Logout</a>
+                {% else %}
+                    <a href="{% url 'customer-signup' %}" class="btn-custom-secondary">Sign Up</a>
+                {% endif %}
             </div>
         </div>
     </div>
